# s2u_deck

./: 3_stage_exe.dot  3_stage_exe_deps.dot  3_stage_pipelined_p1.dot  3_stage_pipelined_p4.dot  3_stages.dot  liveupdate.sh  meson.build
src/dot/3_stages/: 3_stage_pipelined.dot  pipelined_p2.dot  pipelined_p3.dot  simple_order.dot  stages.dot
src/dot/unstaged/: batch_deps.dot
